gitops/base/namespace.yaml
# =============================================================================
# Namespace ToggleMaster
# =============================================================================
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster
  labels:
    app.kubernetes.io/name: togglemaster
    app.kubernetes.io/managed-by: argocd
